--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -382,6 +382,7 @@ on post-fs-data
     # Start bootcharting as soon as possible after the data partition is
     # mounted to collect more data.
     mkdir /data/bootchart 0755 shell shell
+    write /data/bootchart/enabled 1
     bootchart start
 
     # Avoid predictable entropy pool. Carry over entropy from previous boot.
